--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 body {
-    background-color: lightgreen;
+    background-color: lightblue;
 }
 h1 {
-    color: navy;
+    color: darkblue;
     text-align: center;
     font-size: 36px;
 }
 p {
-    color: brown;
-    font-size: 20px;
-    text-decoration: underline;
+    color: green;
+    font-size: 36px;
+    text-decoration:;
 }
